# duckling

./: CMakeLists.txt  LICENSE  README.md
src/base/: copyable.h  noncopyable.h
src/base/test/: CMakeLists.txt  mainUnittest.cpp  runTest.sh
